--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
             </div>
         </div>
     </div>
+    <script src="js/songs-data.js"></script>
     <script src="js/script.js"></script>
 </body>
 
